# venustracker

./: .gitignore  pyproject.toml  railway.toml
backend/: database.py  main.py  requirements.txt
frontend/: .env.production  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  api.js  index.css  utils.js
frontend/src/components/: BottomNav.jsx  CalendarGrid.jsx  CalendarToday.jsx  EphemerisChart.jsx  EventsList.jsx  ObserverInput.jsx  VenusHero.jsx
frontend/src/pages/: AboutPage.jsx  InfoPage.jsx  LogPage.jsx  NewsPage.jsx  SkyFinder.jsx  TonightPage.jsx
scripts/: generate_splash.py
src/venustracker/: __init__.py  cache.py  cli.py  config.py  service.py
src/venustracker/catalogues/: __init__.py  gsc.py  hipparcos.py  pgc.py  tycho2.py
src/venustracker/core/: calendar.py  coordinates.py  ephemeris.py  venus.py
src/venustracker/feeds/: cobs.py  dss.py  horizons.py  vizier.py
